# sseclient

./: README.md  README.rst  pyproject.toml  setup.py  test.py  tox.ini
sseclient/: __init__.py  __init__.pyi  client.py  version.py
tests/: test_sseclient.py  unittests.py
